[package]
name = "ros-nalgebra"
version = "0.1.0"
authors = ["Takashi Ogura <ogura@smilerobotics.com>"]
edition = "2021"
description = "ROS message converter for rosrust and nalgebra"
license = "Apache-2.0"
categories = ["algorithms"]
repository = "https://github.com/openrr/ros-nalgebra"

[dependencies]

[dev-dependencies]
rosrust = "0.9"
nalgebra = "0.32"
