[package]
name = "ros-nalgebra"
version = "0.1.0"
authors = ["Takashi Ogura <ogura@smilerobotics.com>"]
edition = "2021"
description = "ROS message converter for rosrust and nalgebra"
license = "Apache-2.0"
categories = ["algorithms"]
repository = "https://github.com/openrr/ros-nalgebra"

[dependencies]

[dev-dependencies]
rosrust = "0.9"
nalgebra = "0.32"

[lints]
workspace = true

[workspace.lints.rust]
missing_debug_implementations = "warn"
# missing_docs = "warn" # TODO: This somehow warns examples.
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unreachable_pub = "warn"
