[package]
name = "ros-nalgebra"
# When publishing a new version:
# - Create "v0.x.y" git tag
# - Push the above tag (run `git push origin --tags`)
# Then, CI will publish to crates.io and create a GitHub release.
version = "0.1.0"
authors = ["Takashi Ogura <ogura@smilerobotics.com>"]
edition = "2021"
description = "ROS message converter for rosrust and nalgebra"
license = "Apache-2.0"
categories = ["algorithms"]
repository = "https://github.com/openrr/ros-nalgebra"

[dependencies]

[dev-dependencies]
rosrust = "0.9"
nalgebra = "0.33"

[lints]
workspace = true

[workspace.lints.rust]
missing_debug_implementations = "warn"
# missing_docs = "warn" # TODO: This somehow warns examples.
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unreachable_pub = "warn"
[workspace.lints.clippy]
lint_groups_priority = { level = "allow", priority = 1 } # https://github.com/rust-lang/rust-clippy/issues/12920
